--- a/nginx-secure-app.yaml
+++ b/nginx-secure-app.yaml
@@ -40,7 +40,7 @@ spec:
           name: nginxconfigmap
       containers:
       - name: nginxhttps
-        image: bprashanth/nginxhttps:1.0
+        image: urwithnishad/nginxhttps:1.0
         ports:
         - containerPort: 443
         - containerPort: 80
